forgot lang oops

--- a/common/src/main/resources/assets/oxide/lang/en_us.json
+++ b/common/src/main/resources/assets/oxide/lang/en_us.json
@@ -5,5 +5,6 @@
   "block.oxide.mod_block": "Mod Block",
 
 
-  "block.oxide.rusted_cut_iron": "Rusted Cut Iron"
+  "block.oxide.rusted_cut_iron": "Rusted Cut Iron",
+  "block.oxide.rusted_plate_iron": "Rusted Plate Iron"
 }
